--- a/index.html
+++ b/index.html
@@ -2,10 +2,71 @@
 <html>
   <head>
     <title>Keyboard Controller for Smash Ultimate on the Nintendo Switch</title>
+    <link rel="stylesheet" href="landing.css" />
   </head>
   <body>
-    <h1>The first Keyboard Controller for Smash Ultimate on the Nintendo Switch</h1>
-    <input type="email" name="interested-email" id="interested-email" placeholder="lucina@nintendo.com" />
-    <input type="submit" />
+    <div class="holder">
+      <h1>A Keyboard Controller</h1>
+      <h2>Designed with Smash Ultimate in mind, for the Nintendo Switch</h2>
+      <form id="interest-form" name="interest-form">
+        <input
+          type="email"
+          required
+          name="interested-email"
+          id="interested-email"
+          placeholder="lucina@nintendo.com"
+        />
+        <input type="submit" onclick="handleSubmit" />
+      </form>
+    </div>
+
+    <!-- My App JS -->
+    <script>
+      function handleSubmit(ev) {
+        ev.preventDefault();
+        const emailInput = document.getElementById("interested-email");
+        const emailVal = emailInput.value;
+
+        var db = firebase.firestore();
+        db.collection("emails")
+          .add({
+            email: emailVal
+          })
+          .then(function(docRef) {
+            console.log("Document written with ID: ", docRef.id);
+          })
+          .catch(function(error) {
+            console.error("Error adding document: ", error);
+          });
+      }
+
+      const interestFormEle = document.getElementById("interest-form");
+      interestFormEle.addEventListener("submit", handleSubmit);
+    </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-firestore.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCLTOrsPbBrCXu-WTEKDYO5c9lglog9lcU",
+        authDomain: "keyboard-controller-waitlist.firebaseapp.com",
+        databaseURL: "https://keyboard-controller-waitlist.firebaseio.com",
+        projectId: "keyboard-controller-waitlist",
+        storageBucket: "keyboard-controller-waitlist.appspot.com",
+        messagingSenderId: "757579060743",
+        appId: "1:757579060743:web:64a5b6b35c55e2fec13ca2",
+        measurementId: "G-TRS5XJHX3B"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
