Removed video hosted on imgur

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="page-wrapper">
       <div class="video-wrapper">
         <video autoplay muted loop id="demo-video">
-          <source src="./video.webm" type="video/webm" />
+          <source src="http://i.imgur.com/UnmdRYx.mp4" type="video/webm" />
         </video>
         <!-- <div class="shadow"></div> -->
       </div>
