--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="subscribe">
         <form id="interest-form" name="interest-form">
           <label id="interested-label" for="interested-email"
-            >Drop your email below and I'll let you know when it's ready!</label
+            >Leave your email and I'll let you know when I'm done 😊</label
           >
           <input
             type="email"
