--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Keyboard Controller for Smash Ultimate on the Nintendo Switch</title>
+    <title>
+      A Keyboard Controller for Smash Ultimate on the Nintendo Switch
+    </title>
     <link rel="stylesheet" href="landing.css" />
   </head>
   <body>
     <div class="page-wrapper">
+      <h1 class="page-title">NessDan's Keyboard Controller</h1>
+      <p class="subtitle">(Made with Smash Ultimate in mind.)</p>
       <div class="video-wrapper">
         <video autoplay muted loop id="demo-video">
           <source src="http://i.imgur.com/UnmdRYx.mp4" type="video/webm" />
