Shadow and font changes.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
   <head>
     <title>
-      A Keyboard Controller for Smash Ultimate on the Nintendo Switch
+      A Keyboard Controller for Smash Ultimate on the Nintendo Switch - Made
+      with love by NessDan
     </title>
     <link rel="stylesheet" href="landing.css" />
   </head>
   <body>
     <div class="page-wrapper">
-      <h1 class="page-title">NessDan's Keyboard Controller</h1>
-      <p class="subtitle">(Made with Smash Ultimate in mind.)</p>
+      <div class="heading-wrapper shadow bottom">
+        <h1 class="page-title">NessDan's Keyboard Controller</h1>
+        <p class="subtitle">(Made with Smash Ultimate in mind.)</p>
+      </div>
       <div class="video-wrapper">
         <video autoplay muted loop id="demo-video">
           <source src="http://i.imgur.com/UnmdRYx.mp4" type="video/webm" />
         </video>
         <!-- <div class="shadow"></div> -->
       </div>
-      <div class="subscribe">
+      <div class="subscribe shadow top">
         <form id="interest-form" name="interest-form">
           <label id="interested-label" for="interested-email"
             >Leave your email and I'll let you know when I'm done 🙂</label
