Text and style updates

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page-wrapper">
       <div class="heading-wrapper shadow bottom">
-        <h1 class="page-title">NessDan's Keyboard Controller</h1>
+        <h1 class="page-title">A Keyboard Controller</h1>
         <p class="subtitle">(Made with Smash Ultimate in mind.)</p>
       </div>
       <div class="video-wrapper">
