--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <body>
     <div class="page-wrapper">
       <div class="heading-wrapper shadow bottom">
-        <h1 class="page-title">A Keyboard Controller</h1>
-        <p class="subtitle">(Made with Smash Ultimate in mind. Coming soon!)</p>
+        <h1 class="page-title">
+          The Smash <span class="word-box">Keyboard Controller</span>
+        </h1>
+        <p class="subtitle">(Coming soon!)</p>
       </div>
       <div class="video-wrapper">
         <video autoplay muted loop id="demo-video">
-          <source src="http://i.imgur.com/UnmdRYx.mp4" type="video/webm" />
+          <source src="https://i.imgur.com/UnmdRYx.mp4" type="video/mp4" />
         </video>
         <!-- <div class="shadow"></div> -->
       </div>
