--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="video-wrapper">
         <video autoplay muted loop id="demo-video">
-          <source src="https://i.imgur.com/QXre2mg.mp4" type="video/mp4" />
+          <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
         </video>
         <!-- <div class="shadow"></div> -->
       </div>
