Play inline for iOS Safari

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="subtitle">(Coming soon!)</p>
       </div>
       <div class="video-wrapper">
-        <video autoplay muted loop id="demo-video">
+        <video autoplay loop playsinline muted id="demo-video">
           <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
         </video>
       </div>
