Improved CSS, created the fold, started writing features

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="landing.css" />
   </head>
   <body>
-    <div class="page-wrapper">
-      <div class="heading-wrapper shadow bottom">
+    <div class="the-fold">
+      <div class="heading-wrapper">
         <h1 class="page-title">
           The Smash <span class="word-box">Keyboard Controller</span>
         </h1>
@@ -20,7 +20,7 @@
           <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
         </video>
       </div>
-      <div class="subscribe shadow top">
+      <div class="subscribe">
         <div id="thank-you" class="thank-you hidden">
           <strong
             >Thank you so much! I'm excited to be making these and I hope you
@@ -46,6 +46,19 @@
         </form>
       </div>
     </div>
+
+    <!-- <section class="features">
+        <h2>Features</h2>
+
+        <ul>
+          <li>Compatible with all Switch games</li>
+          <li>Customize your button mappings</li>
+          <li>Swap between button presets you've created</li>
+          <li>Supports some wireless keyboards</li>
+          <li>PC Compatible</li>
+          <li>Small form factor</li>
+        </ul>
+      </section> -->
 
     <!-- My App JS -->
     <script>
