autofocus email input

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <input
             type="email"
             required
+            autofocus
             name="interested-email"
             id="interested-email"
             placeholder="sans@waluigi.wah"
