--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             type="email"
             required
             autofocus
+            autocomplete="email"
             name="interested-email"
             id="interested-email"
             placeholder="sans@waluigi.wah"
