--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         </h1>
         <p class="subtitle">(Coming soon!)</p>
       </div>
-      <div class="video-wrapper">
-        <video autoplay loop playsinline muted id="demo-video">
-          <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
-        </video>
-      </div>
+      <video controls autoplay loop playsinline muted id="demo-video">
+        <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
+      </video>
       <div class="subscribe">
         <div id="thank-you" class="thank-you hidden">
           <strong
