--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </h1>
         <p class="subtitle">(Coming soon!)</p>
       </div>
-      <video controls autoplay loop playsinline muted id="demo-video">
+      <video autoplay loop playsinline muted id="demo-video">
         <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
       </video>
       <div class="subscribe">
