Added "Adapter" to the name.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      The Smash Keyboard Controller - Made with love by NessDan
+      The Smash Keyboard Controller Adapter - Made with love by NessDan
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="landing.css" />
@@ -11,7 +11,7 @@
     <div class="the-fold">
       <div class="heading-wrapper">
         <h1 class="page-title">
-          The Smash <span class="word-box">Keyboard Controller</span>
+          The Smash <span class="word-box">Keyboard Controller Adapter</span>
         </h1>
         <p class="subtitle">(Coming soon!)</p>
       </div>
