--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>
-      The Smash Keyboard Controller Adapter - Made with love by NessDan
+      The Smash Keyboard Controller Adapter - Play any game on the Nintendo
+      Switch with a Keyboard!
     </title>
+    <meta
+      name="description"
+      content="Play Smash Ultimate on a Keyboard! This adapter turns any keyboard into a Switch controller. Works with any game on the Nintendo Switch."
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="landing.css" />
   </head>
