--- a/index.html
+++ b/index.html
@@ -114,28 +114,22 @@
     </script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+    <script
+      defer="true"
+      src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"
+    ></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-firestore.js"></script>
+    <script
+      defer="true"
+      src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"
+    ></script>
+    <script
+      defer="true"
+      src="https://www.gstatic.com/firebasejs/7.0.0/firebase-firestore.js"
+    ></script>
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyCLTOrsPbBrCXu-WTEKDYO5c9lglog9lcU",
-        authDomain: "keyboard-controller-waitlist.firebaseapp.com",
-        databaseURL: "https://keyboard-controller-waitlist.firebaseio.com",
-        projectId: "keyboard-controller-waitlist",
-        storageBucket: "keyboard-controller-waitlist.appspot.com",
-        messagingSenderId: "757579060743",
-        appId: "1:757579060743:web:64a5b6b35c55e2fec13ca2",
-        measurementId: "G-TRS5XJHX3B"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script>
+    <script defer="true" src="firebase-init.js"></script>
   </body>
 </html>
