--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta
       name="description"
-      content="Play Smash Ultimate on a Keyboard! This adapter turns any keyboard into a Switch controller. Works with any game on the Nintendo Switch."
+      content="Play Smash Ultimate with a Keyboard! This adapter turns any keyboard into a Nintendo Switch controller. Compatible with games like Tetris 99, Super Mario Maker 2, Celeste, and more!"
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
