--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 
         <p>
           An adapter that turns <em>any keyboard</em> into a Switch controller.
+          Allowing you to play Smash with a keyboard!
         </p>
         <p>
-          Made with <strong>Smash Ultimate</strong> in mind, but also compatible
-          with games like <strong>Tetris 99</strong>,
-          <strong>Super Mario Maker 2</strong>, <strong>Celeste</strong>, and
+          Although it was made with <strong>Smash Ultimate</strong> in mind,
+          this adapter will also be compatible with games like
+          <strong>Tetris 99</strong>, <strong>Super Mario Maker 2</strong>, and
           more!
         </p>
       </section>
@@ -74,7 +75,7 @@
           <li>Compatible with any* Switch game</li>
           <li>Customizable button presets</li>
           <li>Compatible with most keyboards</li>
-          <li>Controller Compatibility on PC</li>
+          <li>Recognized as a controller on PC</li>
           <li>Small form factor</li>
         </ul>
         <small>*Excludes motion control games.</small>
