*Almost any keyboard

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <h2>What is this?</h2>
 
         <p>
-          An adapter that turns <em>any keyboard</em> into a Switch controller.
-          Allowing you to play Smash with a keyboard!
+          An adapter that turns <em>almost any keyboard</em> into a Switch
+          controller. Allowing you to play Smash with a keyboard!
         </p>
         <p>
           Although it was made with <strong>Smash Ultimate</strong> in mind,
