Change the title of the site.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="the-fold">
         <div class="heading-wrapper">
           <h1 class="page-title">
-            The Smash <span class="word-box">Keyboard Controller Adapter</span>
+            Play Smash with a Keyboard!
           </h1>
           <p class="subtitle">(Coming soon!)</p>
         </div>
