Changed the title for seo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      The Smash Keyboard Controller Adapter - Play any game on the Nintendo
-      Switch with a Keyboard!
+      The Smash Keyboard Controller (It's an adapter!)
     </title>
     <meta
       name="description"
