--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <video autoplay loop playsinline muted id="demo-video">
             <source src="https://i.imgur.com/ZxjAmMl.mp4" type="video/mp4" />
           </video>
-          <iframe class="kickstarter-video" src="https://www.youtube.com/embed/4rDczKkEeYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="video-wrap">
+            <iframe class="kickstarter-video" src="https://www.youtube.com/embed/4rDczKkEeYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="subscribe">
           <div id="thank-you" class="thank-you hidden">
