Fix the title of website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      The Smash Keyboard Controller (It's an adapter!)
+      Play Smash Ultimate with a Keyboard with the Edgeguard by keyboard.gg
     </title>
     <meta
       name="description"
