--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Play Smash Ultimate with a Keyboard with the Edgeguard by keyboard.gg
+      Play Smash Ultimate with a Keyboard! The Edgeguard adapter by keyboard.gg
     </title>
     <meta
       name="description"
